--- a/index.html
+++ b/index.html
@@ -58,19 +58,20 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Next assignment is Due Dec 1st. <a href="assts/asst11.html">Assignment 11: Where others fear to thread</a></p>
-</li>
-<li>
-<p>Last assignment is Due Dec 5th (written - no late work accepted) and 6th. <a href="assts/asst12.html">Assignment 12: Hold on to your memories</a></p>
-</li>
-<li>
-<p>Lab Dec 5th: We work on the written part of assignment 12.</p>
+<p>Lab Dec 12th: <a href="studyguide6.html">Study Guide 6</a></p>
 </li>
 <li>
 <p>Our final exam will be <strong>self-scheduled</strong> during the period Dec 15-20, 2024.</p>
 </li>
 <li>
 <p>Final Exam Review Session: Dec 16th, 11:40am-1:00pm, Park 230.</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="studyguide-final.html">Final Study Guide</a></p>
+</li>
+</ul>
+</div>
 </li>
 <li>
 <p>Additional office hours: Dec 17th, 11:40am-1:00pm, Park 200A.</p>
@@ -468,7 +469,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="assts/asst12.html">Assignment 12</a>: Due Dec 6</p>
 </li>
 <li>
-<p>Lab Dec 5, Final Practice, <a href="studyguide-final.html">Final Study Guide</a></p>
+<p>Lab Dec 5, A12 Readmes (Due Dec 5)</p>
 </li>
 </ul>
 </div></div></td>
@@ -485,7 +486,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_code_optimization">Chapter 12</a></p>
 </li>
 <li>
-<p>Lab Dec 5, Final Practice, <a href="studyguide-final.html">Final Study Guide</a></p>
+<p>Lab Dec 12, <a href="studyguide-final">Final Study Guide</a>, <a href="studyguide6.html">Study Guide 6</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -915,7 +916,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-30 12:28:39 -0500
+Last updated 2024-12-12 15:15:55 -0500
 </div>
 </div>
 </body>
