--- a/schedule.html
+++ b/schedule.html
@@ -753,7 +753,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="assts/asst12.html">Assignment 12</a>: Due Dec 6</p>
 </li>
 <li>
-<p>Lab Dec 5, Final Practice, <a href="studyguide-final.html">Final Study Guide</a></p>
+<p>Lab Dec 5, A12 Readmes (Due Dec 5)</p>
 </li>
 </ul>
 </div></div></td>
@@ -770,7 +770,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_code_optimization">Chapter 12</a></p>
 </li>
 <li>
-<p>Lab Dec 5, Final Practice, <a href="studyguide-final.html">Final Study Guide</a></p>
+<p>Lab Dec 12, <a href="studyguide-final">Final Study Guide</a>, <a href="studyguide6.html">Study Guide 6</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -780,7 +780,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-30 12:26:00 -0500
+Last updated 2024-12-12 15:17:02 -0500
 </div>
 </div>
 </body>
