--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </li>
 <li><a href="#_grading_policies">Grading Policies</a>
 <ul class="sectlevel2">
-<li><a href="#_labs_and_exams">Labs and exams</a></li>
+<li><a href="#_labs_quizzes_exams">Labs, quizzes, exams</a></li>
 <li><a href="#_homeworks_and_exercises">Homeworks and exercises</a></li>
 <li><a href="#_late_policy">Late Policy</a></li>
 </ul>
@@ -58,23 +58,10 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Lab Dec 12th: <a href="studyguide6.html">Study Guide 6</a></p>
+<p>Welcome!</p>
 </li>
 <li>
-<p>Our final exam will be <strong>self-scheduled</strong> during the period Dec 15-20, 2024.</p>
-</li>
-<li>
-<p>Final Exam Review Session: Dec 16th, 11:40am-1:00pm, Park 230.</p>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="studyguide-final.html">Final Study Guide</a></p>
-</li>
-</ul>
-</div>
-</li>
-<li>
-<p>Additional office hours: Dec 17th, 11:40am-1:00pm, Park 200A.</p>
+<p>Assignment</p>
 </li>
 </ul>
 </div>
@@ -121,28 +108,23 @@ will be introduced at the end of the course.</p>
 <tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Lecture</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Park 159</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Tuesday and Thursday 11:40 AM - 1:00 PM</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Park 337</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Tuesday and Thursday 10:10 AM - 11:30 AM</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Lab</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Park 230</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Thursday 2:40 PM - 4:00 PM</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Park 231</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Tuesdays 2:40 PM - 4:00 PM</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Prof. Aline Normoyle</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Park 200B</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Fridays, 2-3 PM (But often will be available until 5 PM)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Tuesdays, 4-5 PM</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Paprika Chen</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Tianyun Song</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Park 231</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Tuesdays, 7-8 PM</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Yue Chen</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Park 231</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Thursdays, 7-8 PM</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">TBD</p></td>
 </tr>
 </tbody>
 </table>
@@ -651,31 +633,28 @@ as a weighted average of all grades according to the following weights:</p>
 </tbody>
 </table>
 <div class="sect2">
-<h3 id="_labs_and_exams">Labs and exams</h3>
+<h3 id="_labs_quizzes_exams">Labs, quizzes, exams</h3>
 <div class="paragraph">
-<p>In labs, we will have practice quizzes for the final exam, each structured
-like a mini-code jam where you work together in teams. Each quiz will have a
-study guide so you know what types of questions to expect. During lab, you will
-be randomly assigned a partner and given 40 minutes to complete the questions.
-The following week in lab, we will go over answers for the previous week.</p>
+<p>Labs and Quizzes are mandatory. No credit is possible for missed quizzes.  If
+you must miss a quiz, you must make arrangements to take the quiz at another
+time BEFORE the scheduled quiz. If you miss a quiz for medical reasons, you must
+provide a doctor&#8217;s note.</p>
 </div>
 <div class="paragraph">
-<p>If you cannot attend a lab, please let the instructor know in advance. There are
-no make-up opportunities for labs — the missing work will be re-weighted to be
-part of your final exam.</p>
+<p>Labs will consist of hands-on practice in teams, alternating each week between
+written exercises and timed coding sessions. Coding sessions will be graded and
+count towards your quiz grade. Worksheets count towards your participation grade.</p>
 </div>
 <div class="paragraph">
 <p>There will be one final exam for the semester. Details and dates will be
 released during the semester.  Please read the section on
-<a href="#_accommodations">accomodations</a> if you are in need of extra time.  You
+<a href="#_accommodations">accommodations</a> if you are in need of extra time.  You
 must inform us of accommodations or conflicts at least 2 weeks in advance of
 the exam.</p>
 </div>
 <div class="paragraph">
-<p>Quizzes and exams will be open book. You will be given sample questions
-beforehand to help you study. <strong>Warning!</strong> Do not rely heavily on your notes
-for quizzes. You will need to have concepts memorized in order to finish
-within the time limit.</p>
+<p>Quizzes and exams will be closed book. You may bring a single, hand written cheat sheet
+with you.</p>
 </div>
 </div>
 <div class="sect2">
@@ -705,28 +684,24 @@ syllabus for links to the assignments.</p>
 <div class="sect2">
 <h3 id="_late_policy">Late Policy</h3>
 <div class="paragraph">
-<p>Because practice is so important for learning how to program, we will do frequent
+<p>Because practice is so important for learning skills, we will do frequent
 exercises, assignments, and quizzes throughout the term.</p>
 </div>
 <div class="paragraph">
 <p>The purpose of this work is to give you hands on experience with the topics
-from class. Most of this work will be due in lecture or labs. The
-weekly time commitment for this course is aimed to be approximately 10 hours per week.</p>
+from class. Most of this work will be due in lecture or labs. <strong>The
+weekly time commitment for this course is aimed to be approximately 10 hours per week,
+including lectures and labs.</strong></p>
 </div>
 <div class="paragraph">
 <p>Assignments will generally be due on Fridays. However, you may request up to <strong>one</strong> late
 day (until Saturday) if necessary. No submissions beyond Saturday will be accepted.
 This allows us time to grade assignments. And it helps prevent you from falling
 behind. Note that with weekly assignments, you can miss a week or two without losing
-much points on a final grade.</p>
+much credit on a final grade.</p>
 </div>
 <div class="paragraph">
-<p>If you need to miss a quiz, we will not have make-ups. Instead, the missed credit for the quiz
-will be added to the final exam.</p>
-</div>
-<div class="paragraph">
-<p>You may need to provide a doctor&#8217;s note if you need special accommodations due to a
-medical emergency. If you require an accommodation for exams and quizzes, this must be submitted
+<p>If you require an accommodation for exams and quizzes, this must be submitted
 to the instructor within the first two weeks or class.</p>
 </div>
 </div>
@@ -736,26 +711,70 @@ to the instructor within the first two weeks or class.</p>
 <h2 id="_academic_integrity">Academic Integrity</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Copied and unattributed work will receive zero credit. At Bryn Mawr, we assume students are
-trustworthy and work with honesty and integrity.
+<p>At Bryn Mawr, we assume students are trustworthy and work with honesty and
+integrity.
 <a href="https://www.brynmawr.edu/deans/academic-and-community-integrity">Look here
-for information about Bryn Mawr&#8217;s Honor Code.</a></p>
+for information about Bryn Mawr&#8217;s Honor Code.</a>. Obviously, quizzes and exams must
+be your own work. However, you will be allowed to work with others on assignments;
+although <strong>everyone must still submit their own work.</strong></p>
 </div>
 <div class="paragraph">
-<p>As you progress in this course, you will see that programming is a creative
-process, similar to writing. The same problem can be solved in
-multiple ways. It&#8217;s <em>essential</em> that you develop your own skills for developing
-algorithms and implementing them through programs.</p>
+<p>Programming is a creative skill that takes practice and effort to develop.  It&#8217;s
+<em>essential</em> that you develop your own skills for developing algorithms and
+implementing them through programs.</p>
 </div>
 <div class="paragraph">
 <p>Quizzes and exams will be <em>closed book</em>. You will be able to bring a
-single cheat sheet with you. <strong>The goal of assignments and labs is to help you
-prepare for quizzes and exams!</strong> If you can sit down, focus, and answer sample
-questions within a time limit, you will ace the exams for this class.
-Incidentally, you will also be prepared to ace a job interview on this topic!</p>
+single cheat sheet with you.</p>
 </div>
 <div class="paragraph">
-<p>Integrity Guidelines:</p>
+<p>The goal of assignments and labs is to help you
+prepare for quizzes and exams. If you can sit down, focus, and answer
+questions within a time limit, you will ace the exams for this class.
+<strong>If you are doing worksheets and assignments but not doing well on quizzes,
+you need to re-think how you are approaching assignments.</strong> After completing an
+assignment, you should be able to</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Explain how your code works to someone else, without looking at your code</p>
+</li>
+<li>
+<p>Explain the system calls necessary to complete your assignment without looking them up online</p>
+</li>
+<li>
+<p>Write a similar program within a few minutes, without looking up help online</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>I can provide advice based on what has helped me learn how to program:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Most beneficial: writing my own programs from scratch, followed by stepping line by line using a debugger to make sure it worked as intended</p>
+</li>
+<li>
+<p>When stuck, debugging the program with the help of a more experienced developer</p>
+</li>
+<li>
+<p>Comparing my solutions with others <em>after I finished my own solution</em></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>I do not recommend relying on stack overflow, copying old solutions, and using Chat-GPT.
+<strong>The absolute worst way to program is by cutting and pasting code you don&#8217;t understand, guessing your
+way to something that kind of works.</strong></p>
+</div>
+<div class="paragraph">
+<p>I am not going to police how you study and develop skills. But I will be assessing you on the results
+of your effort. If you&#8217;re not doing well, you need to figure out how to work differently.</p>
+</div>
+<div class="paragraph">
+<p>Guidelines:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -789,18 +808,16 @@ Incidentally, you will also be prepared to ace a job interview on this topic!</p
 </ul>
 </div>
 <div class="paragraph">
-<p>It&#8217;s ultimately up to you to learn from your assignments! Remember, no one is
+<p>It&#8217;s ultimately up to you to learn from your assignments! No one is
 going to hire you to do work that they can easily do themselves using a search
-or AI program generator. The programs in this course are simple enough for an AI
-or search or two to solve. But the next level of programs will not be so simple. You must
-do the work yourself. This is the only way you will develop the skills and
-expertise to reach your full potential.</p>
+or AI program generator. You can only build expertise with experience and practice.</p>
 </div>
 <div class="paragraph">
-<p>One final point: we will be using open-source repositories for homeworks in this class.
-Thus, it will be possible to see what other students (and previous students) have submitted.
-If you copy from others' repositories, it will be obvious to everyone involved! Only look
-at other solutions after you have finished your own first!</p>
+<p>One final point: we will be using open-source repositories for homeworks in this
+class.  Thus, it will be possible to see what other students (and previous
+students) have submitted.  If you copy from others' repositories, it will be
+obvious, including potential employers! Only look at other solutions after you
+have finished your own first!</p>
 </div>
 </div>
 </div>
@@ -808,13 +825,8 @@ at other solutions after you have finished your own first!</p>
 <h2 id="_academic_accommodations">Academic Accommodations</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>All classes will be recorded and close-captioned. Links to lectures will be
-posted on the class syllabus.</p>
-</div>
-<div class="paragraph">
-<p>Any student who has a disability-related need to record this class first must
-speak with the Director of Access Services, Deb Alder, as part of university
-policy. Class members need to be aware that this class may be recorded.</p>
+<p>Classes will be recorded and close-captioned. Links to lectures will be
+posted on the class slack.</p>
 </div>
 <div class="paragraph">
 <p>To receive an accommodation for a course activity (such as more time on quizzes
@@ -826,18 +838,10 @@ emailed to me, the instructor.</p>
 <div class="paragraph">
 <p>You are also welcome to contact us privately to discuss your academic needs.
 However, all disability-related accommodations must be arranged, in advance,
-through Student Disability Services.</p>
-</div>
-<div class="paragraph">
-<p>Students needing academic accommodations for a disability must first register
-with Access Services. Students can call 610-526-7516 to make an appointment
-with the Director of Access Services, Deb Alder, or email her at
-<a href="mailto:dalder@brynmawr.edu">dalder@brynmawr.edu</a> to begin this confidential process.  Once registered,
-students should schedule an appointment with the professor as early in the
-semester as possible to share the verification form and make appropriate
-arrangements. Please note that accommodations are not retroactive and require
-advance notice to implement. More information can be obtained at the Access
-Services website. (<a href="http://www.brynmawr.edu/access-services/" class="bare">http://www.brynmawr.edu/access-services/</a>)</p>
+through Student Disability Services.  Also note that accommodations are not
+retroactive and require advance notice to implement. More information can be
+obtained at the Access Services website.
+(<a href="http://www.brynmawr.edu/access-services/" class="bare">http://www.brynmawr.edu/access-services/</a>)</p>
 </div>
 </div>
 </div>
@@ -916,7 +920,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-12-12 15:15:55 -0500
+Last updated 2025-01-15 17:48:47 -0500
 </div>
 </div>
 </body>
