--- a/assts/asst04.html
+++ b/assts/asst04.html
@@ -27,6 +27,9 @@
 <h2 id="_assignment_4_watch_where_you_point">Assignment 4: Watch where you point!</h2>
 <div class="sectionbody">
 <div class="paragraph">
+<p><strong>Due Friday, February 14th, before midnight</strong></p>
+</div>
+<div class="paragraph">
 <p>The goals for this assignment are:</p>
 </div>
 <div class="ulist">
@@ -311,7 +314,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-28 10:24:53 -0400
+Last updated 2025-01-15 20:34:31 -0500
 </div>
 </div>
 </body>
