--- a/assts/asst06.html
+++ b/assts/asst06.html
@@ -29,6 +29,9 @@
 <h2 id="_assignment_6_secret_messages">Assignment 6: Secret messages</h2>
 <div class="sectionbody">
 <div class="paragraph">
+<p><strong>Due Friday, February 28, before midnight</strong></p>
+</div>
+<div class="paragraph">
 <p>The goals for this assignment are:</p>
 </div>
 <div class="ulist">
@@ -476,7 +479,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-28 10:24:53 -0400
+Last updated 2025-01-15 20:27:46 -0500
 </div>
 </div>
 </body>
