--- a/assts/asst07.html
+++ b/assts/asst07.html
@@ -27,6 +27,12 @@
 <h2 id="_assignment_7_some_assembly_required">Assignment 7: Some Assembly Required</h2>
 <div class="sectionbody">
 <div class="paragraph">
+<p><strong>Due (Hardcopy) Thursday, March 6th</strong></p>
+</div>
+<div class="paragraph">
+<p><strong>This is a written assignment, not a coding assignment!</strong></p>
+</div>
+<div class="paragraph">
 <p>The goals for this assignment are:</p>
 </div>
 <div class="ulist">
@@ -1138,7 +1144,7 @@ office (Park 200B).</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-28 10:24:20 -0400
+Last updated 2025-01-15 20:28:31 -0500
 </div>
 </div>
 </body>
