--- a/studyguide1.html
+++ b/studyguide1.html
@@ -24,7 +24,7 @@
 <h2 id="_study_guide_1">Study Guide 1</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Quizzes will be closed book. 30 minutes in lab.</p>
+<p>Quizzes will be closed book. You can bring one written cheat sheet. 30 minutes in class.</p>
 </div>
 <div class="paragraph">
 <p>Topics:</p>
@@ -265,7 +265,7 @@ Your function can be iterative or recursive. Test your function from <code>main<
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-09-12 10:18:31 -0400
+Last updated 2025-01-15 20:22:26 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
