--- a/studyguide2.html
+++ b/studyguide2.html
@@ -24,7 +24,7 @@
 <h2 id="_study_guide_2">Study Guide 2</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Code Jams are open book. 40 minutes in lab.</p>
+<p>Quizzes are closed book. You can bring one written cheat sheet. 30 minutes in class.</p>
 </div>
 <div class="paragraph">
 <p>Topics:</p>
@@ -354,7 +354,7 @@ int main() {
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-09-26 11:02:02 -0400
+Last updated 2025-01-15 20:22:16 -0500
 </div>
 </div>
 </body>
