--- a/studyguide3.html
+++ b/studyguide3.html
@@ -24,7 +24,7 @@
 <div class="sect2">
 <h3 id="_study_guide_3">Study Guide 3</h3>
 <div class="paragraph">
-<p>Code Jams are open book. 40 minutes in lab.</p>
+<p>Quizzes are closed book. You can bring one written cheat sheet. 30 minutes in class.</p>
 </div>
 <div class="paragraph">
 <p>Topics:</p>
@@ -421,7 +421,7 @@ Your new number: 0x6d (109)</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-10 15:27:31 -0400
+Last updated 2025-01-15 20:22:04 -0500
 </div>
 </div>
 </body>
