--- a/studyguide5.html
+++ b/studyguide5.html
@@ -29,7 +29,7 @@
 <h2 id="_study_guide_5">Study Guide 5</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Quizzes are closed book. 30 minutes in lab.</p>
+<p>Quizzes are closed book. You can bring one written cheat sheet. 30 minutes in class.</p>
 </div>
 <div class="paragraph">
 <p>Topics:</p>
@@ -455,7 +455,7 @@ int main()
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-12-05 15:43:44 -0500
+Last updated 2025-01-15 20:21:43 -0500
 </div>
 </div>
 </body>
