--- a/studyguide6.html
+++ b/studyguide6.html
@@ -31,7 +31,7 @@
 <h2 id="_study_guide_6">Study Guide 6</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Exams are closed book. One written cheat sheet.</p>
+<p>Quizzes are closed book. You can bring one written cheat sheet. 30 minutes in class.</p>
 </div>
 <div class="paragraph">
 <p>Topics:</p>
@@ -614,7 +614,7 @@ int doubleSum(int *array, int length){
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-12-05 16:21:33 -0500
+Last updated 2025-01-15 20:21:34 -0500
 </div>
 </div>
 </body>
