--- a/assts/asst05.html
+++ b/assts/asst05.html
@@ -37,6 +37,9 @@
 <h2 id="_assignment_5_give_a_little_bit">Assignment 5: Give a little bit</h2>
 <div class="sectionbody">
 <div class="paragraph">
+<p><strong>Due Friday, Feb 21, before midnight</strong></p>
+</div>
+<div class="paragraph">
 <p>The goals for this assignment are:</p>
 </div>
 <div class="ulist">
@@ -565,7 +568,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-17 16:28:09 -0500
+Last updated 2025-01-15 20:27:22 -0500
 </div>
 </div>
 </body>
