--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ on lecture content, worksheets, and assignments.</p>
 <tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">September 3, 5 <a id="week01"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">January 21, 23 <a id="week01"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Introductions, Hello C</strong></p>
 </div>
@@ -170,17 +170,17 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="http://linuxcommand.org/lc3_learning_the_shell.php">Learning the shell</a></p>
 </li>
 <li>
-<p><a href="assts/asst01.html">Assignment 01</a>: Due Sept 6</p>
+<p><a href="assts/asst01.html">Assignment 01</a>: Due January 24</p>
 </li>
 <li>
-<p>Lab: SSH and Github setup</p>
+<p>Lab Jan 21: SSH and Github setup</p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">2</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Sept 10, 12 <a id="week02"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">January 28, 30 <a id="week02"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>More C, Introduction to Pointers</strong></p>
 </div>
@@ -196,17 +196,17 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="https://pythontutor.com/c.html#mode=edit">C Tutor</a></p>
 </li>
 <li>
-<p>Lab Sept 12: Quiz 01 practice, <a href="studyguide1.html">Study Guide: Quiz 01</a></p>
+<p>Lab Jan 28: Quiz 01 practice, <a href="studyguide1.html">Study Guide: Quiz 01</a></p>
 </li>
 <li>
-<p><a href="assts/asst02.html">Assignment 02</a>: Sept 13</p>
+<p><a href="assts/asst02.html">Assignment 02</a>: Due Jan 31</p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">3</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Sept 17, 19 <a id="week03"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">February 4, 6 <a id="week03"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Pointers, malloc/free</strong></p>
 </div>
@@ -219,17 +219,20 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming">Sections 2.1-2.8, 2.9 (Command line arguments only)</a></p>
 </li>
 <li>
-<p>Lab Sept 19: <strong>Quiz 01</strong></p>
+<p>Lab Feb 4: <strong>Code Jam 01</strong></p>
 </li>
 <li>
-<p><a href="assts/asst03.html">Assignment 03</a>: Due September 20</p>
+<p>Class Feb 6: <strong>Quiz 01</strong></p>
+</li>
+<li>
+<p><a href="assts/asst03.html">Assignment 03</a>: Due Feb 7</p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">4</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Sept 24, 26 <a id="week04"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">February 11, 13 <a id="week04"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Pointer-based data structures. Debugging.</strong></p>
 </div>
@@ -245,17 +248,17 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf">Data Structures in C, Mark Allen Weiss, Chpt 3</a></p>
 </li>
 <li>
-<p>Sept 26 Lab: Quiz 02 Practice, <a href="studyguide2.html">Study Guide: Quiz 02</a></p>
+<p>Lab Feb 11: Quiz 02 Practice, <a href="studyguide2.html">Study Guide: Quiz 02</a></p>
 </li>
 <li>
-<p><a href="assts/asst04.html">Assignment 04</a>: Due September 27</p>
+<p><a href="assts/asst04.html">Assignment 04</a>: Due Feb 14</p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">5</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 1,3 <a id="week05"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">February 18, 20 <a id="week05"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Binary and Data Representation</strong></p>
 </div>
@@ -265,17 +268,20 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_binary_and_data_representation">Chapter 4.1-4.9</a></p>
 </li>
 <li>
-<p><a href="assts/asst05.html">Assignment 05</a>: Due Oct 4</p>
+<p><a href="assts/asst05.html">Assignment 05</a>: Due Feb 21</p>
 </li>
 <li>
-<p>Lab Oct 3:  <strong>Quiz 02</strong></p>
+<p>Lab Oct 3: <strong>Code Jam 02</strong></p>
+</li>
+<li>
+<p>Class Feb 20: <strong>Quiz 02</strong></p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">6</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 8, 10 <a id="week06"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">February 25, 27 <a id="week06"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Assembly</strong></p>
 </div>
@@ -291,17 +297,40 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_x64_assembly_chapter">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
 </li>
 <li>
-<p><a href="assts/asst06.html">Assignment 06</a>: Due Oct 11</p>
+<p><a href="assts/asst06.html">Assignment 06</a>: Due Feb 28</p>
 </li>
 <li>
-<p>Lab Oct 10: Practice Quiz 03, <a href="studyguide3.html">Study Guide 3</a></p>
+<p>Lab Oct 10: Quiz 03 Practice, <a href="studyguide3.html">Study Guide 3</a></p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">7</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 16,19 <a id="week08"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">March 4,6 <a id="week07"></a></p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p><strong>The operating system, Processes</strong></p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_the_operating_system">Chapter 13, skip section 13.3</a></p>
+</li>
+<li>
+<p><a href="assts/asst07.html">Assignment 07</a>: Due THURSDAY March 6 <strong>Hardcopy due at Park 200B</strong></p>
+</li>
+<li>
+<p>Lab Oct 24: <strong>*Code Jam 03</strong></p>
+</li>
+<li>
+<p>Class <strong>Quiz 03</strong></p>
+</li>
+</ul>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 22, 24 <a id="week08"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Fall Break</strong></p>
 </div>
@@ -314,28 +343,8 @@ on lecture content, worksheets, and assignments.</p>
 </div></div></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 22, 24 <a id="week07"></a></p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>The operating system, Processes</strong></p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_the_operating_system">Chapter 13, skip section 13.3</a></p>
-</li>
-<li>
-<p><a href="assts/asst07.html">Assignment 07</a>: Due Oct 25 <strong>Hardcopy due at Park 200B</strong></p>
-</li>
-<li>
-<p>Lab Oct 24: <strong>Quiz 03</strong></p>
-</li>
-</ul>
-</div></div></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 29,31 <a id="week09"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">March 18, 20 <a id="week09"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Threads I</strong></p>
 </div>
@@ -348,17 +357,17 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/asst08.html">Assignment 08</a>: Due Nov 1</p>
+<p><a href="assts/asst08.html">Assignment 08</a>: Due March 21</p>
 </li>
 <li>
-<p>Lab: Practice Quiz 04 <a href="studyguide4.html">Study Guide: Quiz 04</a></p>
+<p>Lab March 18: Practice Quiz 04 <a href="studyguide4.html">Study Guide: Quiz 04</a></p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Nov 5, 7 <a id="week10"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">March 25, 27 <a id="week10"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Threads II</strong></p>
 </div>
@@ -368,60 +377,57 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p>Nov 5: NO CLASS. ELECTION Day</p>
+<p><a href="assts/asst09.html">Assignment 09</a>: Due March 28</p>
 </li>
 <li>
-<p><a href="assts/asst09.html">Assignment 09</a>: Due Nov 8</p>
+<p>Lab March 25: <strong>Code Jam 04</strong></p>
 </li>
 <li>
-<p>Lab: <strong>Quiz 04</strong></p>
-</li>
-</ul>
-</div></div></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Nov 12, 14 <a id="week11"></a></p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Threads III</strong></p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="assts/asst10.html">Assignment 10</a>: Due Nov 14th</p>
-</li>
-<li>
-<p>Lab: Quiz Practice, <a href="studyguide5.html">Study Guide 5</a></p>
+<p>Class March 27: <strong>Quiz 04</strong></p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Nov 19,21 <a id="week12"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">April 1, 3 <a id="week11"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Threads IV</strong></p>
+<p><strong>Threads III</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Nov 21, NO CLASS!!</p>
+<p><a href="assts/asst10.html">Assignment 10</a>: Due April 4th</p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
-</li>
-<li>
-<p><a href="assts/asst11.html">Assignment 11</a>: Due Dec 1 (No extensions)</p>
-</li>
-<li>
-<p>Lab: <strong>Quiz 05</strong></p>
+<p>Lab April 1: Quiz 05 Practice, <a href="studyguide5.html">Study Guide 5</a></p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Nov 26 <a id="week13"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">April 8, 10 <a id="week12"></a></p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p><strong>Threads IV</strong></p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
+</li>
+<li>
+<p>Class April 10: <strong>Quiz 05</strong></p>
+</li>
+<li>
+<p>Lab April 8: <strong>Code Jam 05</strong></p>
+</li>
+</ul>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">April 15, 17 <a id="week13"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Malloc</strong></p>
 </div>
@@ -431,14 +437,17 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read:"My malloc: mylloc and mhysa" by Johan Montelius</p>
 </li>
 <li>
-<p>Nov 28: Thanksgiving, NO CLASS</p>
+<p><a href="assts/asst11.html">Assignment 11</a>: Due April 18</p>
+</li>
+<li>
+<p>Lab April 15: Quiz 06 Practice</p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Dec 3,5 <a id="week14"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">April 22, 24 <a id="week14"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Memory</strong></p>
 </div>
@@ -448,17 +457,20 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_storage_and_the_memory_hierarchy">Chapter 11.1-11.3</a></p>
 </li>
 <li>
-<p><a href="assts/asst12.html">Assignment 12</a>: Due Dec 6</p>
+<p>Lab April 22: <strong>Code Jam06</strong></p>
 </li>
 <li>
-<p>Lab Dec 5, A12 Readmes (Due Dec 5)</p>
+<p>Class April 24: <strong>Quiz 04</strong></p>
+</li>
+<li>
+<p><a href="assts/asst12.html">Assignment 12</a>: Due April 25</p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">15</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Dec 10,12 <a id="week15"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">April 29, May 1 <a id="week15"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Code Optimization, C++</strong></p>
 </div>
@@ -468,7 +480,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_code_optimization">Chapter 12</a></p>
 </li>
 <li>
-<p>Lab Dec 12, <a href="studyguide-final">Final Study Guide</a>, <a href="studyguide6.html">Study Guide 6</a></p>
+<p>Lab April 29, <a href="studyguide-final">Final Study Guide</a>, <a href="studyguide6.html">Study Guide 6</a></p>
 </li>
 </ul>
 </div></div></td>
