--- a/studyguide4.html
+++ b/studyguide4.html
@@ -15,7 +15,7 @@
 <div id="content">
 <h2 id="_study_guide_4" class="discrete">Study Guide 4</h2>
 <div class="paragraph">
-<p>Code Jams are open book. 40 minutes in lab.</p>
+<p>Quizzes are closed book. You can bring one written cheat sheet. 30 minutes in class.</p>
 </div>
 <div class="paragraph">
 <p>Topics:</p>
@@ -487,7 +487,7 @@ Edit the file <code>div.S</code> and use the command <code>gcc div.S</code> to b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-27 09:58:07 -0400
+Last updated 2025-01-15 20:21:55 -0500
 </div>
 </div>
 </body>
