--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p>Term: Fall 2024</p>
+<p>Term: Spring 2025</p>
 </div>
 <div class="paragraph">
 <p>Instructor: <a href="https://www.cs.brynmawr.edu/~alinen">Aline Normoyle</a></p>
@@ -58,10 +58,13 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Welcome!</p>
+<p>Welcome to systems programming!</p>
 </li>
 <li>
-<p>Assignment</p>
+<p>Assignment 01 is Posted! <a href="assts/asst01.html">Assignment 01</a>: Due January 24</p>
+</li>
+<li>
+<p>Our first lab will be on January 21st about using github</p>
 </li>
 </ul>
 </div>
@@ -932,7 +935,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-15 17:48:47 -0500
+Last updated 2025-01-15 20:46:28 -0500
 </div>
 </div>
 </body>
