--- a/assts/asst02.html
+++ b/assts/asst02.html
@@ -61,7 +61,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p><code>git remote add upstream <a href="mailto:git@github.com">git@github.com</a>:brynmawr-cs223-f24/cs223-assignments.git</code></p>
+<p><code>git remote add upstream <a href="mailto:git@github.com">git@github.com</a>:brynmawr-cs223-s25/cs223-s25-assignments.git</code></p>
 </li>
 </ul>
 </div>
@@ -94,7 +94,7 @@
 <div class="sectionbody">
 <div class="paragraph">
 <p>Sometimes life can be very frustrating and we just need to shout.
-Write a program, <code>exclaim.c</code> that turns a word into an exclaimation.
+Write a program, <code>exclaim.c</code> that turns a word into an exclamation.
 Your program should loop through each character. If the character
 is a lowercase letter, replace it with a randomly chosen character
 from the set <code>{'@', '!', '#', '*'}</code>.</p>
@@ -432,7 +432,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-15 20:26:26 -0500
+Last updated 2025-01-15 20:58:20 -0500
 </div>
 </div>
 </body>
