new grade rubric

--- a/index.html
+++ b/index.html
@@ -634,16 +634,16 @@ as a weighted average of all grades according to the following weights:</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Final Exam</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">25%</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">15%</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Assignments</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">25%</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Lab work and Quizzes (Code Jams)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">35%</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Code jams and quizzes</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">5%</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Participation</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Lab practice and class participation</p></td>
 </tr>
 </tbody>
 </table>
@@ -935,7 +935,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-15 20:46:28 -0500
+Last updated 2025-01-15 21:13:58 -0500
 </div>
 </div>
 </body>
