--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Lab Jan 28: Quiz 01 practice, <a href="studyguide1.html">Study Guide: Quiz 01</a></p>
 </li>
 <li>
-<p><a href="assts/asst02.html">Assignment 02</a>: Due Jan 31</p>
+<p><a href="assts/asst02.">Assignment 02</a>: Due Jan 31</p>
 </li>
 </ul>
 </div></div></td>
@@ -228,7 +228,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Class Feb 6: <strong>Quiz 01</strong></p>
 </li>
 <li>
-<p><a href="assts/asst03.html">Assignment 03</a>: Due Feb 7</p>
+<p><a href="assts/asst03.">Assignment 03</a>: Due Feb 7</p>
 </li>
 </ul>
 </div></div></td>
@@ -254,7 +254,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Lab Feb 11: Quiz 02 Practice, <a href="studyguide2.html">Study Guide: Quiz 02</a></p>
 </li>
 <li>
-<p><a href="assts/asst04.html">Assignment 04</a>: Due Feb 14</p>
+<p><a href="assts/asst04.">Assignment 04</a>: Due Feb 14</p>
 </li>
 </ul>
 </div></div></td>
@@ -271,10 +271,10 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_binary_and_data_representation">Chapter 4.1-4.9</a></p>
 </li>
 <li>
-<p><a href="assts/asst05.html">Assignment 05</a>: Due Feb 21</p>
+<p><a href="assts/asst05.">Assignment 05</a>: Due Feb 21</p>
 </li>
 <li>
-<p>Lab Oct 3: <strong>Code Jam 02</strong></p>
+<p>Lab Feb 18: <strong>Code Jam 02</strong></p>
 </li>
 <li>
 <p>Class Feb 20: <strong>Quiz 02</strong></p>
@@ -300,10 +300,10 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_x64_assembly_chapter">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
 </li>
 <li>
-<p><a href="assts/asst06.html">Assignment 06</a>: Due Feb 28</p>
+<p><a href="assts/asst06.">Assignment 06</a>: Due Feb 28</p>
 </li>
 <li>
-<p>Lab Oct 10: Quiz 03 Practice, <a href="studyguide3.html">Study Guide 3</a></p>
+<p>Lab Feb 25: Quiz 03 Practice, <a href="studyguide3.html">Study Guide 3</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -323,7 +323,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="assts/asst07.html">Assignment 07</a>: Due THURSDAY March 6 <strong>Hardcopy due at Park 200B</strong></p>
 </li>
 <li>
-<p>Lab Oct 24: <strong>*Code Jam 03</strong></p>
+<p>Lab March 4: <strong>*Code Jam 03</strong></p>
 </li>
 <li>
 <p>Class <strong>Quiz 03</strong></p>
@@ -333,9 +333,9 @@ on lecture content, worksheets, and assignments.</p>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 22, 24 <a id="week08"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">March 11, 13 <a id="week08"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Fall Break</strong></p>
+<p><strong>Spring Break</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -360,7 +360,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/asst08.html">Assignment 08</a>: Due March 21</p>
+<p><a href="assts/asst08.">Assignment 08</a>: Due March 21</p>
 </li>
 <li>
 <p>Lab March 18: Practice Quiz 04 <a href="studyguide4.html">Study Guide: Quiz 04</a></p>
@@ -380,7 +380,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/asst09.html">Assignment 09</a>: Due March 28</p>
+<p><a href="assts/asst09.">Assignment 09</a>: Due March 28</p>
 </li>
 <li>
 <p>Lab March 25: <strong>Code Jam 04</strong></p>
@@ -392,7 +392,7 @@ on lecture content, worksheets, and assignments.</p>
 </div></div></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 1, 3 <a id="week11"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Threads III</strong></p>
@@ -400,7 +400,7 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="assts/asst10.html">Assignment 10</a>: Due April 4th</p>
+<p><a href="assts/asst10.">Assignment 10</a>: Due April 4th</p>
 </li>
 <li>
 <p>Lab April 1: Quiz 05 Practice, <a href="studyguide5.html">Study Guide 5</a></p>
@@ -409,7 +409,7 @@ on lecture content, worksheets, and assignments.</p>
 </div></div></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 8, 10 <a id="week12"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Threads IV</strong></p>
@@ -440,7 +440,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read:"My malloc: mylloc and mhysa" by Johan Montelius</p>
 </li>
 <li>
-<p><a href="assts/asst11.html">Assignment 11</a>: Due April 18</p>
+<p><a href="assts/asst11.">Assignment 11</a>: Due April 18</p>
 </li>
 <li>
 <p>Lab April 15: Quiz 06 Practice</p>
@@ -466,7 +466,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Class April 24: <strong>Quiz 04</strong></p>
 </li>
 <li>
-<p><a href="assts/asst12.html">Assignment 12</a>: Due April 25</p>
+<p><a href="assts/asst12.">Assignment 12</a>: Due April 25</p>
 </li>
 </ul>
 </div></div></td>
@@ -507,7 +507,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><strong>Github Account</strong> Please go to <a href="https://github.com/">github.com</a> and register. You will be using github to submit assignments.</p>
 </li>
 <li>
-<p><strong>Slack</strong> Please go to <a href="https://slack.com/signin">slack.com</a>. Our workspace is BrynMawr-CS223-F24. You can ask questions and request one-on-one help over zoom using this course&#8217;s slack channel.</p>
+<p><strong>Slack</strong> Please go to <a href="https://slack.com/signin">slack.com</a>. Our workspace is BrynMawr-CS223-S25. You can ask questions and request one-on-one help over zoom using this course&#8217;s slack channel.</p>
 </li>
 </ul>
 </div>
@@ -743,12 +743,17 @@ implementing them through programs.</p>
 single cheat sheet with you.</p>
 </div>
 <div class="paragraph">
-<p>The goal of assignments and labs is to help you
-prepare for quizzes and exams. If you can sit down, focus, and answer
-questions within a time limit, you will ace the exams for this class.
+<p>The goal of assignments and labs is to help you prepare for quizzes and exams.
+The goals of quizzes and exams are to help you internalize the material (and
+provide feedback on how well you understand the material) so that you can grow
+towards your full potential as someone who can solve technical problems and who
+can create their own systems and devices.  If you can sit down, focus, and
+answer questions within a time limit, you understand the material and can
+communicate that understanding to someone else.
 <strong>If you are doing worksheets and assignments but not doing well on quizzes,
-you need to re-think how you are approaching assignments.</strong> After completing an
-assignment, you should be able to</p>
+you need to re-think how you are approaching assignments.</strong> You can assess
+whether you&#8217;re  effectively using assignments to learn if you can do the
+following after completing it:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -764,7 +769,7 @@ assignment, you should be able to</p>
 </ul>
 </div>
 <div class="paragraph">
-<p>I can provide advice based on what has helped me learn how to program:</p>
+<p>Here is advice that has worked well for me.</p>
 </div>
 <div class="ulist">
 <ul>
@@ -785,11 +790,11 @@ assignment, you should be able to</p>
 way to something that kind of works.</strong></p>
 </div>
 <div class="paragraph">
-<p>I am not going to police how you study and develop skills. But I will be assessing you on the results
-of your effort. If you&#8217;re not doing well, you need to figure out how to work differently.</p>
+<p>I am not going to police how you study and develop skills.  If you&#8217;re not doing
+well, you need to figure out how to work differently.</p>
 </div>
 <div class="paragraph">
-<p>Guidelines:</p>
+<p>Do&#8217;s:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -805,6 +810,13 @@ of your effort. If you&#8217;re not doing well, you need to figure out how to wo
 <li>
 <p>DO use code from our text books and class (with attribution).</p>
 </li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Don&#8217;ts:</p>
+</div>
+<div class="ulist">
+<ul>
 <li>
 <p>DON&#8217;T use Chat-GPT (or other LLMs) to generate solutions.</p>
 </li>
@@ -935,7 +947,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-15 21:13:58 -0500
+Last updated 2025-01-16 12:44:41 -0500
 </div>
 </div>
 </body>
