--- a/integrity.html
+++ b/integrity.html
@@ -461,12 +461,17 @@ implementing them through programs.</p>
 single cheat sheet with you.</p>
 </div>
 <div class="paragraph">
-<p>The goal of assignments and labs is to help you
-prepare for quizzes and exams. If you can sit down, focus, and answer
-questions within a time limit, you will ace the exams for this class.
+<p>The goal of assignments and labs is to help you prepare for quizzes and exams.
+The goals of quizzes and exams are to help you internalize the material (and
+provide feedback on how well you understand the material) so that you can grow
+towards your full potential as someone who can solve technical problems and who
+can create their own systems and devices.  If you can sit down, focus, and
+answer questions within a time limit, you understand the material and can
+communicate that understanding to someone else.
 <strong>If you are doing worksheets and assignments but not doing well on quizzes,
-you need to re-think how you are approaching assignments.</strong> After completing an
-assignment, you should be able to</p>
+you need to re-think how you are approaching assignments.</strong> You can assess
+whether you&#8217;re  effectively using assignments to learn if you can do the
+following after completing it:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -482,7 +487,7 @@ assignment, you should be able to</p>
 </ul>
 </div>
 <div class="paragraph">
-<p>I can provide advice based on what has helped me learn how to program:</p>
+<p>Here is advice that has worked well for me.</p>
 </div>
 <div class="ulist">
 <ul>
@@ -503,11 +508,11 @@ assignment, you should be able to</p>
 way to something that kind of works.</strong></p>
 </div>
 <div class="paragraph">
-<p>I am not going to police how you study and develop skills. But I will be assessing you on the results
-of your effort. If you&#8217;re not doing well, you need to figure out how to work differently.</p>
+<p>I am not going to police how you study and develop skills.  If you&#8217;re not doing
+well, you need to figure out how to work differently.</p>
 </div>
 <div class="paragraph">
-<p>Guidelines:</p>
+<p>Do&#8217;s:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -523,6 +528,13 @@ of your effort. If you&#8217;re not doing well, you need to figure out how to wo
 <li>
 <p>DO use code from our text books and class (with attribution).</p>
 </li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Don&#8217;ts:</p>
+</div>
+<div class="ulist">
+<ul>
 <li>
 <p>DON&#8217;T use Chat-GPT (or other LLMs) to generate solutions.</p>
 </li>
@@ -557,7 +569,7 @@ have finished your own first!</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-15 17:48:47 -0500
+Last updated 2025-01-16 12:50:52 -0500
 </div>
 </div>
 </body>
