--- a/schedule.html
+++ b/schedule.html
@@ -501,7 +501,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Lab Jan 28: Quiz 01 practice, <a href="studyguide1.html">Study Guide: Quiz 01</a></p>
 </li>
 <li>
-<p><a href="assts/asst02.html">Assignment 02</a>: Due Jan 31</p>
+<p><a href="assts/asst02.">Assignment 02</a>: Due Jan 31</p>
 </li>
 </ul>
 </div></div></td>
@@ -527,7 +527,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Class Feb 6: <strong>Quiz 01</strong></p>
 </li>
 <li>
-<p><a href="assts/asst03.html">Assignment 03</a>: Due Feb 7</p>
+<p><a href="assts/asst03.">Assignment 03</a>: Due Feb 7</p>
 </li>
 </ul>
 </div></div></td>
@@ -553,7 +553,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Lab Feb 11: Quiz 02 Practice, <a href="studyguide2.html">Study Guide: Quiz 02</a></p>
 </li>
 <li>
-<p><a href="assts/asst04.html">Assignment 04</a>: Due Feb 14</p>
+<p><a href="assts/asst04.">Assignment 04</a>: Due Feb 14</p>
 </li>
 </ul>
 </div></div></td>
@@ -570,10 +570,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_binary_and_data_representation">Chapter 4.1-4.9</a></p>
 </li>
 <li>
-<p><a href="assts/asst05.html">Assignment 05</a>: Due Feb 21</p>
+<p><a href="assts/asst05.">Assignment 05</a>: Due Feb 21</p>
 </li>
 <li>
-<p>Lab Oct 3: <strong>Code Jam 02</strong></p>
+<p>Lab Feb 18: <strong>Code Jam 02</strong></p>
 </li>
 <li>
 <p>Class Feb 20: <strong>Quiz 02</strong></p>
@@ -599,10 +599,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_x64_assembly_chapter">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
 </li>
 <li>
-<p><a href="assts/asst06.html">Assignment 06</a>: Due Feb 28</p>
+<p><a href="assts/asst06.">Assignment 06</a>: Due Feb 28</p>
 </li>
 <li>
-<p>Lab Oct 10: Quiz 03 Practice, <a href="studyguide3.html">Study Guide 3</a></p>
+<p>Lab Feb 25: Quiz 03 Practice, <a href="studyguide3.html">Study Guide 3</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -622,7 +622,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="assts/asst07.html">Assignment 07</a>: Due THURSDAY March 6 <strong>Hardcopy due at Park 200B</strong></p>
 </li>
 <li>
-<p>Lab Oct 24: <strong>*Code Jam 03</strong></p>
+<p>Lab March 4: <strong>*Code Jam 03</strong></p>
 </li>
 <li>
 <p>Class <strong>Quiz 03</strong></p>
@@ -632,9 +632,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 22, 24 <a id="week08"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">March 11, 13 <a id="week08"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Fall Break</strong></p>
+<p><strong>Spring Break</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -659,7 +659,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/asst08.html">Assignment 08</a>: Due March 21</p>
+<p><a href="assts/asst08.">Assignment 08</a>: Due March 21</p>
 </li>
 <li>
 <p>Lab March 18: Practice Quiz 04 <a href="studyguide4.html">Study Guide: Quiz 04</a></p>
@@ -679,7 +679,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/asst09.html">Assignment 09</a>: Due March 28</p>
+<p><a href="assts/asst09.">Assignment 09</a>: Due March 28</p>
 </li>
 <li>
 <p>Lab March 25: <strong>Code Jam 04</strong></p>
@@ -691,7 +691,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div></div></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 1, 3 <a id="week11"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Threads III</strong></p>
@@ -699,7 +699,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="assts/asst10.html">Assignment 10</a>: Due April 4th</p>
+<p><a href="assts/asst10.">Assignment 10</a>: Due April 4th</p>
 </li>
 <li>
 <p>Lab April 1: Quiz 05 Practice, <a href="studyguide5.html">Study Guide 5</a></p>
@@ -708,7 +708,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div></div></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 8, 10 <a id="week12"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Threads IV</strong></p>
@@ -739,7 +739,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read:"My malloc: mylloc and mhysa" by Johan Montelius</p>
 </li>
 <li>
-<p><a href="assts/asst11.html">Assignment 11</a>: Due April 18</p>
+<p><a href="assts/asst11.">Assignment 11</a>: Due April 18</p>
 </li>
 <li>
 <p>Lab April 15: Quiz 06 Practice</p>
@@ -765,7 +765,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Class April 24: <strong>Quiz 04</strong></p>
 </li>
 <li>
-<p><a href="assts/asst12.html">Assignment 12</a>: Due April 25</p>
+<p><a href="assts/asst12.">Assignment 12</a>: Due April 25</p>
 </li>
 </ul>
 </div></div></td>
@@ -792,7 +792,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-15 20:46:37 -0500
+Last updated 2025-01-16 13:06:53 -0500
 </div>
 </div>
 </body>
